--- a/style.css
+++ b/style.css
@@ -1,178 +1,198 @@
+/* CABEÇALHO FIXO E MENU NO TOPO */
 header { 
-      background-color: green;
-      padding: 0;
-}
-
-nav li {
-     display: inline;
-     margin: 0 0 0 15px;
-}
-
-
-nav a {
-     text-transform: uppercase;
-     color:black;
-     font-weight: bold;
-     font-size: 22px;
-     text-decoration:none;
-}
-
-nav a:hover{
-     color:orangered;
-     text-decoration: underline;
-}
-
-#logo {
-     width: 190px;
+    background-color: green;
+    padding: 20px 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
 .caixa {
-      position: relative;
-      width: 905px;
-      margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 940px;
+    margin: 0 auto;
 }
 
-nav {
-     position: absolute;
-     top: 90px;
-     right: 10px;
+/* LOGO */
+#logo {
+    width: 190px;
 }
 
+/* NAVEGAÇÃO */
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 20px;
+}
+
+nav li {
+    display: inline;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: none;
+    padding: 8px 15px;
+    background-color: white;
+    border-radius: 6px;
+    transition: 0.3s;
+}
+
+nav a:hover {
+    color: orangered;
+    background-color: #f1f1f1;
+    text-decoration: underline;
+}
+
+/* AJUSTA O CONTEÚDO PARA NÃO FICAR ATRÁS DO HEADER FIXO */
+main {
+    width: 940px;
+    margin: 0 auto;
+    padding-top: 120px; /* espaço para o header fixo */
+}
+
+/* PRODUTOS */
 .produtos {
-     width: 905px;
-     margin: 0 auto;
-     padding: 50px 0;
+    width: 905px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
 .produtos li {
-     display: inline-block;
-     text-align: center;
-     width: 30%;
-     vertical-align: top;
-     padding: 30px 10px;
-     box-sizing: border-box;
-     border: 2px solid black;
-     border-radius: 10px;
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    padding: 30px 10px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 .produtos li:hover {
-     border-color: orangered;
+    border-color: orangered;
 }
 
 .produtos li:active {
-     border-color:purple;
+    border-color: purple;
 }
 
-.produtos li:hover h2{
-     font-size: 34px;
-     color:orangered;
+.produtos li:hover h2 {
+    font-size: 34px;
+    color: orangered;
 }
 
 .produtos h2 {
-     font-size: 30px;
-     font-weight: bold;    
+    font-size: 30px;
+    font-weight: bold;    
 }
 
 .produtos-descricao {
-     font-size: 18px;
+    font-size: 18px;
 }
 
 .produtos-preco {
-     font-size: 22px;
-     font-weight: bold;
-     margin-top: 10px;
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 
+/* RODAPÉ */
 footer {
-     text-align: center;
-     background-color: green;
-     padding: 40px 0;
- }
- 
- footer img {
- width: 200px;
- }
- 
- .copyright {
-     color: black;
-     font-size: 13px;
-     margin: 20px 0 0;
- }
+    text-align: center;
+    background-color: green;
+    padding: 40px 0;
+}
 
- main {
-     width: 940px;
-     margin: 0 auto;
- }
+footer img {
+    width: 200px;
+}
 
- form{
-     margin: 40px 0;
- }
+.copyright {
+    color: black;
+    font-size: 13px;
+    margin: 20px 0 0;
+}
 
- form label, form p {
-     display: block;
-     font-size: 20px;
-     margin: 0 0 10px;
- }
+/* FORMULÁRIO */
+form {
+    margin: 40px 0;
+}
 
- .input-padrao {
-     display: block;
-     margin: 0 0 auto;
-     padding: 10px 25px;
-     width: 50%;
- }
+form label, form p {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
 
- .checkbox {
-     margin: 20px 0;
- }
+.input-padrao {
+    display: block;
+    margin: 0 0 auto;
+    padding: 10px 25px;
+    width: 50%;
+}
 
- .envia {
-     width: 40%;
-     padding: 15px 0;
-     background: green;
-     color: white;
-     font-weight: bold;
-     font-size: 18px;
-     border: none;
-     border-radius: 5px;
-     transition: 1s all;
-     cursor: pointer;
- }
+.checkbox {
+    margin: 20px 0;
+}
 
- .envia:hover{
-   background: green;
-   transform: scale(1.2);
- }
+.envia {
+    width: 40%;
+    padding: 15px 0;
+    background: green;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
 
- table{
-     margin: 20px 0 40px;
- }
+.envia:hover {
+    background: green;
+    transform: scale(1.2);
+}
 
- thead{
-     background: orange;
-     color: white;
-     font-weight: bold;
- }
+table {
+    margin: 20px 0 40px;
+}
 
- td, th{
-     border: 1px solid black;
-     padding: 8px 15px;
- }
+thead {
+    background: orange;
+    color: white;
+    font-weight: bold;
+}
 
- .mapa{
-     padding: 3em 0;
-     text-align: center;
- }
+td, th {
+    border: 1px solid black;
+    padding: 8px 15px;
+}
 
- .mapa p{
-     margin: 0 0 2em;
- }
+.mapa {
+    padding: 3em 0;
+    text-align: center;
+}
 
- .video {
-     width: 560px;
-     margin: 1em auto;
- }
+.mapa p {
+    margin: 0 0 2em;
+}
 
- .produtos img {
+.video {
+    width: 560px;
+    margin: 1em auto;
+}
+
+.produtos img {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
